# ADT

./: 2dpoint.cpp  CMakeLists.txt  README.md  kd.cpp  kd.h  kdt.cpp  kdt.h  main.cpp  node.cpp  object.cpp
test/: 2dpoint.cpp  2dquad.cpp  3dhexa.cpp  3dpoint.cpp  CMakeLists.txt
test_1/: 2dpoint.cpp
tex/: 2dpoint.tex  cuty.tex
vtk/: CMakeLists.txt  draw.cpp  draw_2dpoint.cpp  draw_2dquad.cpp
